fixed logo vertical alignment

--- a/AppLab/src/css/blocks/header.css
+++ b/AppLab/src/css/blocks/header.css
@@ -26,3 +26,7 @@
 .header__logo {
   z-index: 1;
 }
+
+.logo__image {
+  vertical-align: middle;
+}
